Se agrega la referencia a la pagina de generos en el navbar

--- a/frontend/src/components/navbar.html
+++ b/frontend/src/components/navbar.html
@@ -9,7 +9,7 @@
 
             <a class="navbar-item">Comentarios</a>
 
-            <a class="navbar-item">Géneros</a>
+            <a class="navbar-item" href="./generos.html">Géneros</a>
 
             <a class="navbar-item">Plataformas</a>
         </div>
