Se agrega el front del crud de plataformas

--- a/frontend/src/components/navbar.html
+++ b/frontend/src/components/navbar.html
@@ -11,7 +11,7 @@
 
             <a class="navbar-item" href="./generos.html">Géneros</a>
 
-            <a class="navbar-item">Plataformas</a>
+            <a class="navbar-item" href="./plataformas.html">Plataformas</a>
         </div>
     </div>
 </nav>
