agrego página de desarrolladoras al navbar y funcionalidad para crear y mostrar

--- a/frontend/src/components/navbar.html
+++ b/frontend/src/components/navbar.html
@@ -5,7 +5,7 @@
 
             <a class="navbar-item">Juegos</a>
 
-            <a class="navbar-item">Desarrolladoras</a>
+            <a class="navbar-item" href="./desarrolladoras.html">Desarrolladoras</a>
 
             <a class="navbar-item">Comentarios</a>
 
