Se agrega link a pagina de juegos en el navbar

--- a/frontend/src/components/navbar.html
+++ b/frontend/src/components/navbar.html
@@ -3,7 +3,7 @@
         <div class="navbar-start">
             <a class="navbar-item" href="./index.html">Home</a>
 
-            <a class="navbar-item">Juegos</a>
+            <a class="navbar-item" href="./juegos.html">Juegos</a>
 
             <a class="navbar-item" href="./desarrolladoras.html">Desarrolladoras</a>
 
